# kollabhunt

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
domain/: apps.py
kollabhunt-package/: pyproject.toml
kollabhunt-package/kollabhunt/: apps.py
kollabhunt-package/kollabhunt/migrations/: 0001_initial.py  0003_alter_user_email.py  0005_tag.py
kollabhunt-package/kollabhunt/models/: __init__.py  base_model.py  projects.py  tags.py  users.py
kollabhunt-packages/: setup.cfg  setup.py
kollabhunt-packages/kollabhunt/managers/: user_manager.py
kollabhunt-packages/kollabhunt/middlewares/: global_request_middleware.py
kollabhunt-packages/kollabhunt/migrations/: 0002_rename_is_stuff_user_is_staff.py  0004_alter_user_username.py  0006_project_projecttag.py  0007_kollabprofile_kollabprofiletag.py
kollabhunt-packages/kollabhunt/models/: __init__.py  profile.py  users.py
kollabhunt_backend/: manage.py
kollabhunt_backend/kollabauth/: adapters.py  apps.py  backends.py  povider.py  urls.py  views.py
kollabhunt_backend/kollabhunt_backend/: asgi.py  settings.py  swagger_urls.py  urls.py  wsgi.py
kollabhunt_backend/kollabprofile/: apps.py  signals.py
kollabhunt_backend/project/: serializers.py  urls.py  views.py
